--- a/main.ipynb
+++ b/main.ipynb
@@ -1,9 +1,33 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "id": "43c3c288",
+   "metadata": {},
+   "source": [
+    "# Исследование надежности заемщиков"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "0f9630bf",
+   "metadata": {},
+   "source": [
+    "## 1 - Открываем таблицу и изучаем общую информацию о данных"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "422a2bd5",
+   "metadata": {},
+   "source": [
+    "**Импортируем библиотеку pandas. Считайте данные из csv-файла в датафрейм и сохраните в переменную**"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 1,
-   "id": "884641bd",
+   "execution_count": 4,
+   "id": "947b5266",
    "metadata": {},
    "outputs": [
     {
@@ -118,141 +142,120 @@
        "      <td>сыграть свадьбу</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>...</th>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>21520</th>\n",
-       "      <td>1</td>\n",
-       "      <td>-4529.316663</td>\n",
-       "      <td>43</td>\n",
-       "      <td>среднее</td>\n",
-       "      <td>1</td>\n",
+       "      <th>5</th>\n",
+       "      <td>0</td>\n",
+       "      <td>-926.185831</td>\n",
+       "      <td>27</td>\n",
+       "      <td>высшее</td>\n",
+       "      <td>0</td>\n",
        "      <td>гражданский брак</td>\n",
        "      <td>1</td>\n",
+       "      <td>M</td>\n",
+       "      <td>компаньон</td>\n",
+       "      <td>0</td>\n",
+       "      <td>255763.565419</td>\n",
+       "      <td>покупка жилья</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>0</td>\n",
+       "      <td>-2879.202052</td>\n",
+       "      <td>43</td>\n",
+       "      <td>высшее</td>\n",
+       "      <td>0</td>\n",
+       "      <td>женат / замужем</td>\n",
+       "      <td>0</td>\n",
        "      <td>F</td>\n",
        "      <td>компаньон</td>\n",
        "      <td>0</td>\n",
-       "      <td>224791.862382</td>\n",
+       "      <td>240525.971920</td>\n",
        "      <td>операции с жильем</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>21521</th>\n",
+       "      <th>7</th>\n",
        "      <td>0</td>\n",
-       "      <td>343937.404131</td>\n",
-       "      <td>67</td>\n",
-       "      <td>среднее</td>\n",
+       "      <td>-152.779569</td>\n",
+       "      <td>50</td>\n",
+       "      <td>СРЕДНЕЕ</td>\n",
        "      <td>1</td>\n",
        "      <td>женат / замужем</td>\n",
        "      <td>0</td>\n",
-       "      <td>F</td>\n",
-       "      <td>пенсионер</td>\n",
+       "      <td>M</td>\n",
+       "      <td>сотрудник</td>\n",
        "      <td>0</td>\n",
-       "      <td>155999.806512</td>\n",
-       "      <td>сделка с автомобилем</td>\n",
+       "      <td>135823.934197</td>\n",
+       "      <td>образование</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>21522</th>\n",
-       "      <td>1</td>\n",
-       "      <td>-2113.346888</td>\n",
-       "      <td>38</td>\n",
-       "      <td>среднее</td>\n",
-       "      <td>1</td>\n",
+       "      <th>8</th>\n",
+       "      <td>2</td>\n",
+       "      <td>-6929.865299</td>\n",
+       "      <td>35</td>\n",
+       "      <td>ВЫСШЕЕ</td>\n",
+       "      <td>0</td>\n",
        "      <td>гражданский брак</td>\n",
        "      <td>1</td>\n",
-       "      <td>M</td>\n",
-       "      <td>сотрудник</td>\n",
-       "      <td>1</td>\n",
-       "      <td>89672.561153</td>\n",
-       "      <td>недвижимость</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>21523</th>\n",
-       "      <td>3</td>\n",
-       "      <td>-3112.481705</td>\n",
-       "      <td>38</td>\n",
-       "      <td>среднее</td>\n",
-       "      <td>1</td>\n",
-       "      <td>женат / замужем</td>\n",
-       "      <td>0</td>\n",
-       "      <td>M</td>\n",
-       "      <td>сотрудник</td>\n",
-       "      <td>1</td>\n",
-       "      <td>244093.050500</td>\n",
-       "      <td>на покупку своего автомобиля</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>21524</th>\n",
-       "      <td>2</td>\n",
-       "      <td>-1984.507589</td>\n",
-       "      <td>40</td>\n",
-       "      <td>среднее</td>\n",
-       "      <td>1</td>\n",
-       "      <td>женат / замужем</td>\n",
-       "      <td>0</td>\n",
        "      <td>F</td>\n",
        "      <td>сотрудник</td>\n",
        "      <td>0</td>\n",
-       "      <td>82047.418899</td>\n",
-       "      <td>на покупку автомобиля</td>\n",
+       "      <td>95856.832424</td>\n",
+       "      <td>на проведение свадьбы</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>0</td>\n",
+       "      <td>-2188.756445</td>\n",
+       "      <td>41</td>\n",
+       "      <td>среднее</td>\n",
+       "      <td>1</td>\n",
+       "      <td>женат / замужем</td>\n",
+       "      <td>0</td>\n",
+       "      <td>M</td>\n",
+       "      <td>сотрудник</td>\n",
+       "      <td>0</td>\n",
+       "      <td>144425.938277</td>\n",
+       "      <td>покупка жилья для семьи</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>21525 rows × 12 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "       children  days_employed  dob_years education  education_id  \\\n",
-       "0             1   -8437.673028         42    высшее             0   \n",
-       "1             1   -4024.803754         36   среднее             1   \n",
-       "2             0   -5623.422610         33   Среднее             1   \n",
-       "3             3   -4124.747207         32   среднее             1   \n",
-       "4             0  340266.072047         53   среднее             1   \n",
-       "...         ...            ...        ...       ...           ...   \n",
-       "21520         1   -4529.316663         43   среднее             1   \n",
-       "21521         0  343937.404131         67   среднее             1   \n",
-       "21522         1   -2113.346888         38   среднее             1   \n",
-       "21523         3   -3112.481705         38   среднее             1   \n",
-       "21524         2   -1984.507589         40   среднее             1   \n",
+       "   children  days_employed  dob_years education  education_id  \\\n",
+       "0         1   -8437.673028         42    высшее             0   \n",
+       "1         1   -4024.803754         36   среднее             1   \n",
+       "2         0   -5623.422610         33   Среднее             1   \n",
+       "3         3   -4124.747207         32   среднее             1   \n",
+       "4         0  340266.072047         53   среднее             1   \n",
+       "5         0    -926.185831         27    высшее             0   \n",
+       "6         0   -2879.202052         43    высшее             0   \n",
+       "7         0    -152.779569         50   СРЕДНЕЕ             1   \n",
+       "8         2   -6929.865299         35    ВЫСШЕЕ             0   \n",
+       "9         0   -2188.756445         41   среднее             1   \n",
        "\n",
-       "          family_status  family_status_id gender income_type  debt  \\\n",
-       "0       женат / замужем                 0      F   сотрудник     0   \n",
-       "1       женат / замужем                 0      F   сотрудник     0   \n",
-       "2       женат / замужем                 0      M   сотрудник     0   \n",
-       "3       женат / замужем                 0      M   сотрудник     0   \n",
-       "4      гражданский брак                 1      F   пенсионер     0   \n",
-       "...                 ...               ...    ...         ...   ...   \n",
-       "21520  гражданский брак                 1      F   компаньон     0   \n",
-       "21521   женат / замужем                 0      F   пенсионер     0   \n",
-       "21522  гражданский брак                 1      M   сотрудник     1   \n",
-       "21523   женат / замужем                 0      M   сотрудник     1   \n",
-       "21524   женат / замужем                 0      F   сотрудник     0   \n",
+       "      family_status  family_status_id gender income_type  debt   total_income  \\\n",
+       "0   женат / замужем                 0      F   сотрудник     0  253875.639453   \n",
+       "1   женат / замужем                 0      F   сотрудник     0  112080.014102   \n",
+       "2   женат / замужем                 0      M   сотрудник     0  145885.952297   \n",
+       "3   женат / замужем                 0      M   сотрудник     0  267628.550329   \n",
+       "4  гражданский брак                 1      F   пенсионер     0  158616.077870   \n",
+       "5  гражданский брак                 1      M   компаньон     0  255763.565419   \n",
+       "6   женат / замужем                 0      F   компаньон     0  240525.971920   \n",
+       "7   женат / замужем                 0      M   сотрудник     0  135823.934197   \n",
+       "8  гражданский брак                 1      F   сотрудник     0   95856.832424   \n",
+       "9   женат / замужем                 0      M   сотрудник     0  144425.938277   \n",
        "\n",
-       "        total_income                       purpose  \n",
-       "0      253875.639453                 покупка жилья  \n",
-       "1      112080.014102       приобретение автомобиля  \n",
-       "2      145885.952297                 покупка жилья  \n",
-       "3      267628.550329    дополнительное образование  \n",
-       "4      158616.077870               сыграть свадьбу  \n",
-       "...              ...                           ...  \n",
-       "21520  224791.862382             операции с жильем  \n",
-       "21521  155999.806512          сделка с автомобилем  \n",
-       "21522   89672.561153                  недвижимость  \n",
-       "21523  244093.050500  на покупку своего автомобиля  \n",
-       "21524   82047.418899         на покупку автомобиля  \n",
-       "\n",
-       "[21525 rows x 12 columns]"
+       "                      purpose  \n",
+       "0               покупка жилья  \n",
+       "1     приобретение автомобиля  \n",
+       "2               покупка жилья  \n",
+       "3  дополнительное образование  \n",
+       "4             сыграть свадьбу  \n",
+       "5               покупка жилья  \n",
+       "6           операции с жильем  \n",
+       "7                 образование  \n",
+       "8       на проведение свадьбы  \n",
+       "9     покупка жилья для семьи  "
       ]
      },
      "metadata": {},
@@ -261,15 +264,196 @@
    ],
    "source": [
     "import pandas as pd\n",
-    "df = pd.read_csv('/Users/yuliabezginova/PycharmProjects/project-1_bank-credit-scoring/data_bank_scoring_project.csv')\n",
+    "data = pd.read_csv('/Users/yuliabezginova/PycharmProjects/project-1_bank-credit-scoring/data_bank_scoring_project.csv')\n",
     "# print(df)\n",
-    "display(df)"
+    "display(data.head(10))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "74586a78",
+   "metadata": {},
+   "source": [
+    "### Описание переменных"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "63425c5a",
+   "metadata": {},
+   "source": [
+    "children — количество детей в семье\n",
+    "days_employed — общий трудовой стаж в днях\n",
+    "dob_years — возраст клиента в годах\n",
+    "education — уровень образования клиента\n",
+    "education_id — идентификатор уровня образования\n",
+    "family_status — семейное положение\n",
+    "family_status_id — идентификатор семейного положения\n",
+    "gender — пол клиента\n",
+    "income_type — тип занятости\n",
+    "debt — имел ли задолженность по возврату кредитов\n",
+    "total_income — ежемесячный доход\n",
+    "purpose — цель получения кредита"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "aab516e8",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "RangeIndex: 21525 entries, 0 to 21524\n",
+      "Data columns (total 12 columns):\n",
+      " #   Column            Non-Null Count  Dtype  \n",
+      "---  ------            --------------  -----  \n",
+      " 0   children          21525 non-null  int64  \n",
+      " 1   days_employed     19351 non-null  float64\n",
+      " 2   dob_years         21525 non-null  int64  \n",
+      " 3   education         21525 non-null  object \n",
+      " 4   education_id      21525 non-null  int64  \n",
+      " 5   family_status     21525 non-null  object \n",
+      " 6   family_status_id  21525 non-null  int64  \n",
+      " 7   gender            21525 non-null  object \n",
+      " 8   income_type       21525 non-null  object \n",
+      " 9   debt              21525 non-null  int64  \n",
+      " 10  total_income      19351 non-null  float64\n",
+      " 11  purpose           21525 non-null  object \n",
+      "dtypes: float64(2), int64(5), object(5)\n",
+      "memory usage: 2.0+ MB\n"
+     ]
+    }
+   ],
+   "source": [
+    "data.info() #выводим основную информацию о датафрейме на экран"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "4f3b7024",
+   "metadata": {},
+   "source": [
+    "## 2 - Предобработка данных"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "50bd6644",
+   "metadata": {},
+   "source": [
+    "### Удаление пропусков"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "06606e3a",
+   "metadata": {},
+   "source": [
+    "**Выводим на экран количество пропущенных значений для каждого столбца**"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "a355b780",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "children               0\n",
+      "days_employed       2174\n",
+      "dob_years              0\n",
+      "education              0\n",
+      "education_id           0\n",
+      "family_status          0\n",
+      "family_status_id       0\n",
+      "gender                 0\n",
+      "income_type            0\n",
+      "debt                   0\n",
+      "total_income        2174\n",
+      "purpose                0\n",
+      "dtype: int64\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(data.isna().sum())"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "7425e446",
+   "metadata": {},
+   "source": [
+    "**В двух столбцах есть пропущенные значения. Один из них — days_employed. Другой столбец с пропущенными значениями — total_income — хранит данные о доходах. На сумму дохода сильнее всего влияет тип занятости, поэтому заполнить пропуски в этом столбце нужно медианным значением по каждому типу из столбца income_type. Например, у человека с типом занятости сотрудник пропуск в столбце total_income должен быть заполнен медианным доходом среди всех записей с тем же типом.**"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "39bb7655",
+   "id": "69350a38",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ca3ec89b",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f4e48711",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "8df5463e",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "2203d7c7",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "27638797",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "4581bd55",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "cca44bc2",
    "metadata": {},
    "outputs": [],
    "source": []
